--- a/OrderingFoodSystem/Views/Web.config
+++ b/OrderingFoodSystem/Views/Web.config
@@ -17,6 +17,22 @@
   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Consumers.mdf"
   providerName="System.Data.SqlClient"
 />
+  <add name="FoodOrderContext"
+  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Registrations.mdf"
+  providerName="System.Data.SqlClient"
+/>
+  <add name="RestaurantDBContext"
+  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\RestaurantInfos.mdf"
+  providerName="System.Data.SqlClient"
+/>
+  <add name="RestaurantlsDBContext"
+  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Restaurantlss.mdf"
+  providerName="System.Data.SqlClient"
+/>
+  <add name="ItemDBContext"
+  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Items.mdf"
+  providerName="System.Data.SqlClient"
+/>
   </connectionStrings>
 
   <system.web.webPages.razor>
