--- a/OrderingFoodSystem/OrderingFoodSystem.csproj
+++ b/OrderingFoodSystem/OrderingFoodSystem.csproj
@@ -135,11 +135,17 @@
     <Compile Include="Controllers\ConsumersController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ItemsController.cs" />
+    <Compile Include="Controllers\RestaurantlsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Consumer.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\FoodOrderContext.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Registration.cs" />
+    <Compile Include="Models\Restaurantls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -253,6 +259,22 @@
     <Content Include="Views\Consumers\Details.cshtml" />
     <Content Include="Views\Consumers\Edit.cshtml" />
     <Content Include="Views\Consumers\Index.cshtml" />
+    <Content Include="Views\Shared\RestaurantTemplate.cshtml" />
+    <Content Include="Views\Home\Restaurant.cshtml" />
+    <Content Include="Views\Shared\_LoginTemplate.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\LoggedIn.cshtml" />
+    <Content Include="Views\Restaurantls\Create.cshtml" />
+    <Content Include="Views\Restaurantls\Delete.cshtml" />
+    <Content Include="Views\Restaurantls\Details.cshtml" />
+    <Content Include="Views\Restaurantls\Edit.cshtml" />
+    <Content Include="Views\Restaurantls\Index.cshtml" />
+    <Content Include="Views\Items\Create.cshtml" />
+    <Content Include="Views\Items\Delete.cshtml" />
+    <Content Include="Views\Items\Details.cshtml" />
+    <Content Include="Views\Items\Edit.cshtml" />
+    <Content Include="Views\Items\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
