--- a/OrderingFoodSystem/Views/Web.config
+++ b/OrderingFoodSystem/Views/Web.config
@@ -29,10 +29,11 @@
   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Restaurantlss.mdf"
   providerName="System.Data.SqlClient"
 />
-  <add name="ItemDBContext"
-  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Items.mdf"
+    <add name="ItemlsDBContext"
+  connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-OrderingFoodSystem;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Itemlss.mdf"
   providerName="System.Data.SqlClient"
 />
+  
   </connectionStrings>
 
   <system.web.webPages.razor>
